Bug 726943 - Fullscreen button in HTML video makes the browser go fullscreen but not the video [r=mstange, a=lsblakk] Don't fire extraneous NS_SIZEMODE events from windowDidResize, that cause the DOM fullscreen requests to be cancelled on Mac.